added extra likedBY user feature in response for frontend to display